--- a/BrickstoreWpf/MainWindow.xaml
+++ b/BrickstoreWpf/MainWindow.xaml
@@ -12,16 +12,25 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
-            <Button x:Name="btnMegnyit" Content="Megnyit" Click="btnMegnyit_Click"/>
-            <TextBox x:Name="txtSzuro" Width="200" Margin="10,0,0,0" TextChanged="txtSzuro_TextChanged"/>
-        </StackPanel>
+         <Button x:Name="btnMegnyit" Content="Megnyit" Click="btnMegnyit_Click" Grid.Column="0" Grid.Row="0"/>
+         <Label Content="ItemID" Grid.Row="1"/>
+         <TextBox x:Name="txtItemID" Width="200" Grid.Row="1" TextChanged="txtSzuro_TextChanged"/>
+         <Label Content="ItemName" Grid.Row="2"/>
+         <TextBox x:Name="txtItemName" Width="200" Grid.Row="2" TextChanged="txtSzuro_TextChanged"/>
+         <Label Content="CategoryName" Grid.Row="3"/>
+        <ComboBox x:Name="cbCategoryName" Grid.Row="3" Width="300" HorizontalAlignment="Right" SelectionChanged="cbCategoryName_SelectionChanged">
+            
+        </ComboBox>
 
-        <DataGrid x:Name="dgLegoKeszlet" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" AutoGenerateColumns="False">
+
+        <DataGrid x:Name="dgLegoKeszlet" Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="2" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ItemID" Binding="{Binding ItemID}"/>
                 <DataGridTextColumn Header="ItemTypeID" Binding="{Binding ItemTypeID}"/>
@@ -39,6 +48,6 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <TextBlock x:Name="tbElemekSzama" Grid.Column="1" Grid.Row="0" Margin="10,0,0,0" Text="Elemek száma: "/>
+        <TextBlock x:Name="tbElemekSzama" Grid.Column="1" Grid.RowSpan="4" VerticalAlignment="Center" Margin="10,0,0,0" Text="Elemek száma: "/>
     </Grid>
 </Window>
